force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <nameField>
        <displayFormat>NTF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>