force-app/main/default/objects/Notification__c/fields/ext_JobId__c.field-meta.xml
<CustomField>
    <fullName>ext_JobId__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>